--- a/news/package.json
+++ b/news/package.json
@@ -16,6 +16,7 @@
     "koa-router": "^7.4.0",
     "mysql": "^2.16.0",
     "node-schedule": "^1.3.2",
+    "request": "^2.88.0",
     "superagent": "^5.0.2",
     "superagent-charset": "^1.2.0"
   }
